--- a/package.json
+++ b/package.json
@@ -104,7 +104,9 @@
     "electron-window-state": "^3.0.3",
     "font-awesome": "^4.6.1",
     "fs-plus": "^2.8.2",
+    "function-plot": "^1.16.5",
     "highlight.js": "^9.4.0",
+    "jquery": "^3.0.0",
     "js-yaml": "^3.6.1",
     "katex": "^0.6.0",
     "markdown-it": "^6.0.2",
@@ -130,9 +132,11 @@
     "redux": "^3.4.0",
     "redux-thunk": "^2.0.1",
     "remarkable": "^1.6.2",
+    "request": "^2.72.0",
     "semver": "^5.1.0",
     "source-map-support": "^0.4.0",
-    "superagent": "^2.0.0-alpha.3",
+    "utils-copy": "^1.1.1",
+    "validate.io-function": "^1.0.2",
     "validate.io-string": "^1.0.2",
     "watchjs": "0.0.0"
   },
