--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "package": "cross-env NODE_ENV=production node -r babel-register package.js",
     "package-all": "npm run package -- --all",
     "postinstall": "node node_modules/fbjs-scripts/node/check-dev-engines.js package.json",
+    "publish-docs": "gitbook build && echo \"isle.philipp-burckhardt.com\" > _book/CNAME && gh-pages --dist _book",
+    "view-docs": "concurrently --kill-others \"gitbook serve\" \"sensible-browser http://localhost:4000\"",
     "dev": "concurrently --kill-others \"npm run hot-server\" \"npm run start-hot\""
   },
   "bin": {
@@ -77,6 +79,8 @@
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "fbjs-scripts": "^0.6.0",
+    "gh-pages": "^0.11.0",
+    "gitbook-cli": "^2.3.0",
     "jsdom": "^8.4.0",
     "json-loader": "^0.5.4",
     "minimist": "^1.2.0",
