Update eslint rules

--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
     "consistent-return": 0,
     "comma-dangle": 0,
     "computed-property-spacing": ["error", "always"],
+    "default-case": 0,
     "no-underscore-dangle": 0,
     "no-use-before-define": 0,
     "import/no-unresolved": [2, { ignore: ['electron'] }],
