--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "package": "cross-env NODE_ENV=production node -r babel-register package.js",
     "package-all": "npm run package -- --all",
     "postinstall": "node node_modules/fbjs-scripts/node/check-dev-engines.js package.json",
-    "publish-docs": "gitbook build && echo \"isle.philipp-burckhardt.com\" > _book/CNAME && gh-pages --dist _book",
+    "publish-docs": "gitbook build && echo \"isledocs.philipp-burckhardt.com\" > _book/CNAME && gh-pages --dist _book",
     "view-docs": "concurrently --kill-others \"gitbook serve\" \"sensible-browser http://localhost:4000\"",
     "dev": "concurrently --kill-others \"npm run hot-server\" \"npm run start-hot\""
   },
@@ -79,6 +79,7 @@
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "fbjs-scripts": "^0.6.0",
+    "file-loader": "^0.9.0",
     "gh-pages": "^0.11.0",
     "gitbook-cli": "^2.3.0",
     "jsdom": "^8.4.0",
@@ -101,9 +102,10 @@
   "dependencies": {
     "aphrodite": "^0.3.1",
     "bootstrap": "^3.3.6",
-    "brace": "^0.8.0",
+    "brace": "https://github.com/Planeshifter/brace.git",
     "classnames": "^2.2.5",
     "css-modules-require-hook": "^4.0.0",
+    "d3": "^3.5.17",
     "electron-debug": "^0.6.0",
     "electron-window-state": "^3.0.3",
     "font-awesome": "^4.6.1",
@@ -136,7 +138,7 @@
     "redux": "^3.4.0",
     "redux-thunk": "^2.0.1",
     "remarkable": "^1.6.2",
-    "request": "^2.72.0",
+    "request": "2.57.0",
     "semver": "^5.1.0",
     "source-map-support": "^0.4.0",
     "utils-copy": "^1.1.1",
