--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "normalize.css": "^4.1.1",
     "postcss": "^5.0.19",
     "radium": "^0.17.1",
+    "raw-loader": "^0.5.1",
     "react": "^15.0.1",
     "react-ace": "^3.4.1",
     "react-bootstrap": "^0.29.4",
