--- a/package.json
+++ b/package.json
@@ -126,15 +126,20 @@
     "react": "^15.0.1",
     "react-ace": "^3.4.1",
     "react-bootstrap": "^0.29.4",
+    "react-dimensions": "^1.3.0",
     "react-dom": "^15.0.1",
     "react-geomicons": "^2.0.5",
     "react-markdown": "^2.2.0",
+    "react-number-field": "^1.0.4",
+    "react-numeric-input": "^2.0.4",
+    "react-player": "^0.7.4",
     "react-redux": "^4.4.5",
     "react-remarkable": "^1.1.1",
     "react-router": "^2.2.4",
     "react-router-redux": "^4.0.2",
     "react-split-pane": "^0.1.42",
     "react-tools": "^0.13.3",
+    "react-youtube": "^7.0.1",
     "rebass": "^0.2.6",
     "redux": "^3.4.0",
     "redux-thunk": "^2.0.1",
