--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,9 @@
 {
-  "presets": ["es2015", "stage-0", "react"],
+  "presets": ["es2015", "react", "stage-0"],
   "plugins": [
-    "add-module-exports"
+    "add-module-exports",
+    "transform-es2015-classes",
+    "transform-class-properties"
   ],
   "env": {
     "development": {
