--- a/package.json
+++ b/package.json
@@ -51,9 +51,13 @@
   "homepage": "https://github.com/Planeshifter/isle-editor#readme",
   "devDependencies": {
     "asar": "^0.11.0",
+    "babel": "^6.5.2",
+    "babel-core": "^6.11.4",
     "babel-eslint": "^6.0.2",
     "babel-loader": "^6.2.4",
     "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-plugin-transform-class-properties": "^6.10.2",
+    "babel-plugin-transform-es2015-classes": "^6.9.0",
     "babel-plugin-webpack-loaders": "^0.4.0",
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
@@ -95,7 +99,7 @@
     "selenium-webdriver": "^2.53.1",
     "sinon": "^1.17.3",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.0",
+    "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.10.0"
   },
