--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,7 @@
 {
   "presets": ["es2015", "react", "stage-0"],
   "plugins": [
-    "add-module-exports",
-    "transform-es2015-classes",
-    "transform-class-properties"
+    "add-module-exports"
   ],
   "env": {
     "development": {
