--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Editor for Interactive Statistics Learning Environment (ISLE) lessons.",
   "main": "main.js",
   "scripts": {
+    "clean": "rm -rf node_modules",
     "test": "cross-env NODE_ENV=test mocha --compilers js:babel-register --recursive --require ./test/setup.js test/**/*.spec.js",
     "test-watch": "npm test -- --watch",
     "test-e2e": "cross-env NODE_ENV=test mocha --compilers js:babel-register --require ./test/setup.js --require co-mocha ./test/e2e.js",
@@ -52,18 +53,10 @@
   "devDependencies": {
     "asar": "^0.11.0",
     "babel": "^6.5.2",
-    "babel-core": "^6.11.4",
-    "babel-eslint": "^6.0.2",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-add-module-exports": "^0.1.2",
-    "babel-plugin-transform-class-properties": "^6.10.2",
-    "babel-plugin-transform-es2015-classes": "^6.9.0",
-    "babel-plugin-webpack-loaders": "^0.4.0",
+    "babel-eslint": "^6.1.2",
+    "babel-plugin-webpack-loaders": "^0.7.0",
     "babel-polyfill": "^6.7.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.7.2",
     "chai": "^3.5.0",
     "chromedriver": "^2.21.2",
@@ -83,15 +76,11 @@
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "fbjs-scripts": "^0.6.0",
-    "file-loader": "^0.9.0",
     "gh-pages": "^0.11.0",
     "gitbook-cli": "^2.3.0",
     "jsdom": "^8.4.0",
-    "json-loader": "^0.5.4",
-    "minimist": "^1.2.0",
     "mocha": "^2.4.5",
     "moment": "^2.13.0",
-    "node-libs-browser": "^1.0.0",
     "react-addons-test-utils": "^15.0.1",
     "redux-devtools": "^3.2.0",
     "redux-devtools-dock-monitor": "^1.1.1",
@@ -100,12 +89,18 @@
     "selenium-webdriver": "^2.53.1",
     "sinon": "^1.17.3",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.10.0"
   },
   "dependencies": {
     "aphrodite": "^0.3.1",
+    "babel-core": "^6.11.4",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-runtime": "^6.9.2",
     "bootstrap": "^3.3.6",
     "brace": "https://github.com/Planeshifter/brace.git",
     "classnames": "^2.2.5",
@@ -113,16 +108,19 @@
     "d3": "^3.5.17",
     "electron-debug": "^0.6.0",
     "electron-window-state": "^3.0.3",
+    "file-loader": "^0.9.0",
     "font-awesome": "^4.6.1",
     "fs-plus": "^2.8.2",
     "function-plot": "^1.16.5",
     "highlight.js": "^9.4.0",
     "jquery": "^3.0.0",
     "js-yaml": "^3.6.1",
+    "json-loader": "^0.5.4",
     "katex": "^0.6.0",
     "markdown-it": "^6.0.2",
     "marked": "^0.3.5",
-    "mdreact": "^0.1.1",
+    "minimist": "^1.2.0",
+    "node-libs-browser": "^1.0.0",
     "normalize.css": "^4.1.1",
     "postcss": "^5.0.19",
     "radium": "^0.17.1",
@@ -135,7 +133,6 @@
     "react-geomicons": "^2.0.5",
     "react-markdown": "^2.2.0",
     "react-number-field": "^1.0.4",
-    "react-numeric-input": "^2.0.4",
     "react-player": "^0.7.4",
     "react-redux": "^4.4.5",
     "react-remarkable": "^1.1.1",
@@ -143,7 +140,6 @@
     "react-router-redux": "^4.0.2",
     "react-split-pane": "^0.1.42",
     "react-tools": "^0.13.3",
-    "react-youtube": "^7.0.1",
     "rebass": "^0.2.6",
     "redux": "^3.4.0",
     "redux-thunk": "^2.0.1",
@@ -151,10 +147,10 @@
     "request": "2.57.0",
     "semver": "^5.1.0",
     "source-map-support": "^0.4.0",
-    "utils-copy": "^1.1.1",
     "validate.io-function": "^1.0.2",
     "validate.io-string": "^1.0.2",
-    "watchjs": "0.0.0"
+    "watchjs": "0.0.0",
+    "webpack": "^1.13.1"
   },
   "devEngines": {
     "node": "4.x || 5.x || 6.x",
