--- a/package.json
+++ b/package.json
@@ -62,20 +62,19 @@
     "chromedriver": "^2.21.2",
     "co-mocha": "^1.1.2",
     "concurrently": "^2.0.0",
-    "cross-env": "^1.0.7",
+    "cross-env": "2.0.0",
     "css-loader": "^0.23.1",
     "del": "^2.2.0",
     "electron-packager": "^7.3.0",
     "electron-prebuilt": "^1.2.8",
     "electron-rebuild": "^1.1.3",
     "eslint": "^3.1.1",
-    "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.8.0",
     "eslint-plugin-jsx-a11y": "^2.0.1",
     "eslint-plugin-react": "^5.1.1",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
-    "fbjs-scripts": "^0.6.0",
+    "fbjs-scripts": "^0.7.1",
     "gh-pages": "^0.11.0",
     "gitbook-cli": "^2.3.0",
     "jsdom": "^9.4.1",
