--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "gitbook-cli": "^2.3.0",
     "jsdom": "^9.4.1",
     "mocha": "^2.4.5",
+    "modclean": "^1.2.7",
     "moment": "^2.13.0",
     "react-addons-test-utils": "^15.0.1",
     "redux-devtools": "^3.2.0",
@@ -132,14 +133,12 @@
     "react-number-field": "^1.0.4",
     "react-player": "^0.7.4",
     "react-redux": "^4.4.5",
-    "react-remarkable": "^1.1.1",
     "react-router": "^2.2.4",
     "react-router-redux": "^4.0.2",
     "react-split-pane": "^0.1.42",
     "react-tools": "^0.13.3",
     "redux": "^3.4.0",
     "redux-thunk": "^2.0.1",
-    "remarkable": "^1.6.2",
     "request": "2.57.0",
     "semver": "^5.1.0",
     "source-map-support": "^0.4.0",
