--- a/package.json
+++ b/package.json
@@ -70,14 +70,14 @@
     "eslint": "^3.1.1",
     "eslint-plugin-import": "^1.8.0",
     "eslint-plugin-jsx-a11y": "^2.0.1",
-    "eslint-plugin-react": "^5.1.1",
+    "eslint-plugin-react": "6.x.x",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "fbjs-scripts": "^0.7.1",
     "gh-pages": "^0.11.0",
     "gitbook-cli": "^2.3.0",
     "jsdom": "^9.4.1",
-    "mocha": "^2.4.5",
+    "mocha": "3.x.x",
     "modclean": "^1.2.7",
     "moment": "^2.13.0",
     "react-addons-test-utils": "^15.0.1",
@@ -128,12 +128,11 @@
     "raw-loader": "^0.5.1",
     "react": "^15.0.1",
     "react-ace": "^3.4.1",
-    "react-bootstrap": "^0.29.4",
+    "react-bootstrap": "^0.30.2",
     "react-dimensions": "^1.3.0",
     "react-dom": "^15.0.1",
-    "react-geomicons": "^2.0.5",
     "react-number-field": "^1.0.4",
-    "react-player": "^0.7.4",
+    "react-player": "^0.8.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.2.4",
     "react-router-redux": "^4.0.2",
@@ -145,9 +144,6 @@
     "semver": "^5.1.0",
     "source-map-support": "^0.4.0",
     "uglify-js": "^2.7.0",
-    "validate.io-function": "^1.0.2",
-    "validate.io-string": "^1.0.2",
-    "watchjs": "0.0.0",
     "webpack": "^1.13.1"
   },
   "devEngines": {
