--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "markdown-it": "^7.0.0",
     "markdown-it-jsx": "^1.0.0",
     "minimist": "^1.2.0",
+    "mustache": "^2.2.1",
     "node-libs-browser": "^1.0.0",
     "nodemailer": "^2.5.0",
     "normalize.css": "^4.1.1",
@@ -131,6 +132,7 @@
     "react-bootstrap": "^0.30.2",
     "react-dimensions": "^1.3.0",
     "react-dom": "^15.0.1",
+    "react-notification-system": "^0.2.7",
     "react-number-field": "^1.0.4",
     "react-player": "^0.9.0",
     "react-redux": "^4.4.5",
