--- a/package.json
+++ b/package.json
@@ -140,6 +140,7 @@
     "react-router-redux": "^4.0.2",
     "react-split-pane": "^0.1.42",
     "react-tools": "^0.13.3",
+    "rebass": "^0.3.1",
     "redux": "^3.4.0",
     "redux-thunk": "^2.0.1",
     "request": "2.57.0",
