Add R Table component

--- a/package.json
+++ b/package.json
@@ -104,12 +104,13 @@
     "bootstrap": "^3.3.6",
     "brace": "https://github.com/Planeshifter/brace.git",
     "classnames": "^2.2.5",
-    "css-loader": "^0.23.1",
+    "css-loader": "^0.24.0",
     "css-modules-require-hook": "^4.0.0",
     "d3": "^3.5.17",
     "electron-debug": "^1.0.1",
     "electron-window-state": "^3.0.3",
     "file-loader": "^0.9.0",
+    "fixed-data-table": "^0.6.3",
     "fs-plus": "^2.8.2",
     "function-plot": "^1.16.5",
     "highlight.js": "^9.4.0",
