--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "css-loader": "^0.24.0",
     "css-modules-require-hook": "^4.0.0",
     "d3": "^3.5.17",
+    "debug": "^2.2.0",
     "electron-debug": "^1.0.1",
     "electron-window-state": "^3.0.3",
     "file-loader": "^0.9.0",
@@ -133,11 +134,11 @@
     "react-bootstrap": "^0.30.2",
     "react-dom": "^15.0.1",
     "react-notification-system": "^0.2.7",
-    "react-number-field": "^1.0.4",
     "react-player": "^0.9.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.2.4",
     "react-router-redux": "^4.0.2",
+    "react-slick": "^0.13.6",
     "react-split-pane": "^0.1.42",
     "react-tools": "^0.13.3",
     "rebass": "^0.3.1",
