--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "concurrently": "^2.0.0",
     "cross-env": "2.0.1",
     "del": "^2.2.0",
-    "electron-packager": "^7.3.0",
+    "electron-packager": "8.0.0",
     "electron-prebuilt": "^1.2.8",
     "electron-rebuild": "^1.1.3",
     "eslint": "^3.1.1",
