--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "cross-env": "2.0.1",
     "del": "^2.2.0",
     "electron-packager": "8.0.0",
-    "electron-prebuilt": "^1.2.8",
+    "electron": "1.3.5",
     "electron-rebuild": "^1.1.3",
     "eslint": "^3.1.1",
     "eslint-plugin-import": "^1.8.0",
