--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "js-yaml": "^3.6.1",
     "json-loader": "^0.5.4",
     "katex": "^0.6.0",
+    "lodash.flow": "^3.5.0",
     "markdown-it": "^7.0.0",
     "markdown-it-jsx": "^1.0.0",
     "minimist": "^1.2.0",
@@ -133,6 +134,8 @@
     "react": "^15.0.1",
     "react-ace": "^3.4.1",
     "react-bootstrap": "^0.30.2",
+    "react-dnd": "^2.1.4",
+    "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^15.0.1",
     "react-notification-system": "^0.2.7",
     "react-player": "^0.9.0",
