--- a/package.json
+++ b/package.json
@@ -141,6 +141,7 @@
     "raw-loader": "^0.5.1",
     "react": "^15.0.1",
     "react-bootstrap": "^0.30.2",
+    "react-color": "^2.2.7",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^15.0.1",
