--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "asar": "^0.12.0",
     "babel": "^6.5.2",
     "babel-eslint": "^6.1.2",
+    "babel-plugin-transform-react-constant-elements": "^6.9.1",
+    "babel-plugin-transform-react-remove-prop-types": "^0.2.9",
     "babel-plugin-webpack-loaders": "^0.7.0",
     "babel-polyfill": "^6.7.4",
     "babel-preset-react-hmre": "^1.1.1",
@@ -71,8 +73,8 @@
     "concurrently": "^3.0.0",
     "cross-env": "3.0.0",
     "del": "^2.2.0",
-    "electron-packager": "8.0.0",
     "electron": "1.4.1",
+    "electron-packager": "8.0.0",
     "electron-rebuild": "^1.1.3",
     "eslint": "^3.1.1",
     "eslint-plugin-import": "^1.8.0",
