--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "main": "main.js",
   "scripts": {
     "clean": "rm -rf node_modules",
-    "test": "cross-env NODE_ENV=test mocha --compilers js:babel-register --recursive --require ./test/setup.js test/**/*.spec.js",
+    "test": "cross-env NODE_ENV=test BABEL_DISABLE_CACHE=1 tape -r babel-register test/setup.js test/**/*.spec.js | tap-spec",
     "test-watch": "npm test -- --watch",
-    "test-e2e": "cross-env NODE_ENV=test mocha --compilers js:babel-register --require ./test/setup.js --require co-mocha ./test/e2e.js",
     "lint": "eslint app test *.js",
     "hot-server": "node -r babel-register server.js",
     "build-main": "cross-env NODE_ENV=production node -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.electron.js --progress --profile --colors",
@@ -76,6 +75,7 @@
     "electron": "1.4.1",
     "electron-packager": "8.0.0",
     "electron-rebuild": "^1.1.3",
+    "enzyme": "^2.4.1",
     "eslint": "^3.1.1",
     "eslint-plugin-import": "^1.8.0",
     "eslint-plugin-jsx-a11y": "^2.0.1",
@@ -97,6 +97,8 @@
     "selenium-webdriver": "^2.53.1",
     "sinon": "^1.17.3",
     "style-loader": "^0.13.1",
+    "tap-spec": "^4.1.1",
+    "tape": "^4.6.0",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.10.0"
   },
@@ -116,7 +118,7 @@
     "configstore": "^2.1.0",
     "css-loader": "^0.25.0",
     "css-modules-require-hook": "^4.0.0",
-    "d3": "^3.5.17",
+    "d3": "3.5.17",
     "debug": "^2.2.0",
     "electron-debug": "^1.0.1",
     "electron-window-state": "^3.0.3",
@@ -147,7 +149,7 @@
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^15.0.1",
     "react-notification-system": "^0.2.7",
-    "react-player": "^0.9.0",
+    "react-player": "^0.11.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.2.4",
     "react-router-redux": "^4.0.2",
