--- a/package.json
+++ b/package.json
@@ -68,9 +68,9 @@
     "babel-register": "^6.7.2",
     "chromedriver": "^2.21.2",
     "concurrently": "^3.0.0",
-    "cross-env": "3.1.1",
+    "cross-env": "3.1.x",
     "del": "^2.2.0",
-    "electron": "1.4.2",
+    "electron": "1.4.x",
     "electron-packager": "8.1.0",
     "electron-rebuild": "^1.1.3",
     "enzyme": "^2.4.1",
@@ -161,7 +161,7 @@
     "semver": "^5.1.0",
     "source-map-support": "^0.4.0",
     "uglify-js": "^2.7.0",
-    "victory": "^0.12.1",
+    "victory": "^0.13.0",
     "webpack": "^1.13.1"
   },
   "devEngines": {
