--- a/package.json
+++ b/package.json
@@ -165,7 +165,7 @@
     "webpack": "^1.13.1"
   },
   "devEngines": {
-    "node": "4.x || 5.x || 6.x",
+    "node": "4.x || 5.x || 6.x || 7.x",
     "npm": "2.x || 3.x"
   }
 }
