--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-register": "^6.7.2",
     "chromedriver": "^2.21.2",
+    "codecov": "^1.0.1",
     "concurrently": "^3.0.0",
     "cross-env": "3.1.x",
     "del": "^2.2.0",
