--- a/package.json
+++ b/package.json
@@ -123,7 +123,7 @@
     "debug": "^2.2.0",
     "dompurify": "^0.8.3",
     "electron-debug": "^1.0.1",
-    "electron-window-state": "^3.0.3",
+    "electron-window-state": "^4.0.0",
     "element-resize-event": "^2.0.5",
     "file-loader": "^0.9.0",
     "fixed-data-table": "^0.6.3",
@@ -140,7 +140,7 @@
     "markdown-it-jsx": "^1.0.0",
     "minimist": "^1.2.0",
     "mustache": "^2.2.1",
-    "node-libs-browser": "^1.0.0",
+    "node-libs-browser": "^2  .0.0",
     "normalize.css": "^5.0.0",
     "postcss": "^5.0.19",
     "radium": "^0.18.1",
