--- a/package.json
+++ b/package.json
@@ -69,13 +69,13 @@
     "babel-polyfill": "^6.7.4",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-register": "^6.7.2",
-    "chromedriver": "^2.21.2",
+    "chromedriver": "^2.26.0",
     "codecov": "^1.0.1",
     "concurrently": "^3.0.0",
     "cross-env": "3.1.x",
     "del": "^2.2.0",
     "electron": "1.4.x",
-    "electron-packager": "8.2.0",
+    "electron-packager": "8.4.0",
     "electron-rebuild": "^1.1.3",
     "enzyme": "^2.4.1",
     "eslint": "^3.1.1",
@@ -123,7 +123,7 @@
     "debug": "^2.2.0",
     "dompurify": "^0.8.3",
     "electron-debug": "^1.0.1",
-    "electron-window-state": "^4.0.0",
+    "electron-window-state": "^4.0.1",
     "element-resize-event": "^2.0.5",
     "file-loader": "^0.9.0",
     "fixed-data-table": "^0.6.3",
@@ -137,10 +137,9 @@
     "lodash.debounce": "^4.0.8",
     "lodash.flow": "^3.5.0",
     "markdown-it": "^8.0.0",
-    "markdown-it-jsx": "^1.0.0",
     "minimist": "^1.2.0",
     "mustache": "^2.2.1",
-    "node-libs-browser": "^2  .0.0",
+    "node-libs-browser": "^2.0.0",
     "normalize.css": "^5.0.0",
     "postcss": "^5.0.19",
     "radium": "^0.18.1",
@@ -152,8 +151,8 @@
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^15.0.1",
     "react-notification-system": "^0.2.7",
-    "react-player": "^0.12.0",
-    "react-redux": "^4.4.5",
+    "react-player": "^0.13.0",
+    "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.2",
     "react-slick": "^0.14.4",
@@ -166,7 +165,7 @@
     "semver": "^5.1.0",
     "source-map-support": "^0.4.0",
     "uglify-js": "^2.7.0",
-    "victory": "^0.13.0",
+    "victory": "^0.14.2",
     "webpack": "^1.13.1"
   },
   "devEngines": {
