Fix tests by customizing Babel ignore behavior

--- a/.eslintrc
+++ b/.eslintrc
@@ -51,6 +51,7 @@
       },
       "node": {
         "moduleDirectory": [
+          "app/node_modules",
           "node_modules",
           "node_modules/@stdlib/stdlib/lib/node_modules"
         ]
