--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "package-all": "npm run package -- --all",
     "postinstall": "node node_modules/fbjs-scripts/node/check-dev-engines.js package.json",
     "init-docs": "gitbook install",
-    "publish-docs": "gitbook build && echo \"isledocs.philipp-burckhardt.com\" > _book/CNAME && gh-pages --dist _book",
+    "publish-docs": "gitbook build && echo \"isledocs.com\" > _book/CNAME && gh-pages --dist _book",
     "view-docs": "concurrently --kill-others \"gitbook serve\" \"sensible-browser http://localhost:4000\"",
     "dev": "concurrently --kill-others \"npm run hot-server\" \"npm run start-hot\""
   },
