--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "clean": "rm -rf node_modules",
     "coverage": "istanbul cover --dir ./reports/codecov/coverage --report lcovonly tape -- -r babel-register test/setup.js test/**/*.spec.js && cat ./reports/codecov/coverage/lcov.info | codecov && rm -rf ./reports/codecov",
-    "test": "cross-env NODE_PATH=./app/node_modules NODE_ENV=test BABEL_DISABLE_CACHE=1 tape -r babel-register test/setup.js test/**/*.spec.js | tap-spec",
-    "test-cov": "istanbul cover --dir ./reports/coverage --report lcov tape -- -r babel-register test/setup.js test/**/*.spec.js",
+    "test": "cross-env NODE_ENV=test BABEL_DISABLE_CACHE=1 tape -r babel-register test/setup.js test/**/*.spec.js | tap-spec",
+    "test-cov": "cross-env NODE_ENV=test BABEL_DISABLE_CACHE=1 istanbul cover --dir ./reports/coverage --report lcov tape -- -r babel-register test/setup.js test/**/*.spec.js",
     "test-watch": "npm test -- --watch",
     "lint": "eslint app test *.js",
     "hot-server": "node -r babel-register server.js",
@@ -62,10 +62,12 @@
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-eslint": "^7.0.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-react-constant-elements": "^6.9.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.2.9",
     "babel-plugin-webpack-loaders": "^0.8.0",
     "babel-polyfill": "^6.7.4",
+    "babel-preset-es2015-loose": "^8.0.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-register": "^6.7.2",
     "codecov": "^1.0.1",
@@ -73,7 +75,7 @@
     "cross-env": "3.1.x",
     "del": "^2.2.0",
     "electron": "1.4.x",
-    "electron-packager": "8.4.0",
+    "electron-packager": "8.5.0",
     "electron-rebuild": "^1.1.3",
     "enzyme": "^2.4.1",
     "eslint": "^3.1.1",
@@ -106,6 +108,7 @@
     "babel-core": "^6.11.4",
     "babel-loader": "^6.2.4",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-resolver": "^1.1.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
@@ -128,7 +131,7 @@
     "jquery": "^3.0.0",
     "js-yaml": "^3.6.1",
     "json-loader": "^0.5.4",
-    "katex": "^0.6.0",
+    "katex": "^0.7.0",
     "lodash.debounce": "^4.0.8",
     "lodash.flow": "^3.5.0",
     "markdown-it": "^8.0.0",
