--- a/.eslintrc
+++ b/.eslintrc
@@ -51,7 +51,7 @@
       },
       "node": {
         "moduleDirectory": [
-          "app/node_modules",
+          "app",
           "node_modules",
           "node_modules/@stdlib/stdlib/lib/node_modules"
         ]
