--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "0.17.2",
   "description": "Editor for Interactive Statistics Learning Environment (ISLE) lessons.",
   "main": "main.js",
+  "bin": {
+    "isle-editor": "./bin/cli.js"
+  },
   "scripts": {
     "clean": "rm -rf node_modules",
     "coverage": "istanbul cover --dir ./reports/codecov/coverage --report lcovonly tape -- -r babel-register test/setup.js test/**/*.spec.js && cat ./reports/codecov/coverage/lcov.info | codecov && rm -rf ./reports/codecov",
@@ -19,14 +22,11 @@
     "start-hot": "cross-env HOT=1 NODE_ENV=development electron -r babel-register ./main.development",
     "package": "cross-env NODE_ENV=production node -r babel-register package.js",
     "package-all": "npm run package -- --all",
-    "postinstall": "node node_modules/fbjs-scripts/node/check-dev-engines.js package.json",
+    "postinstall": "node node_modules/fbjs-scripts/node/check-dev-engines.js package.json && npm run build",
     "init-docs": "gitbook install",
     "publish-docs": "gitbook build && echo \"isledocs.com\" > _book/CNAME && gh-pages --dist _book",
     "view-docs": "concurrently --kill-others \"gitbook serve\" \"sensible-browser http://localhost:4000\"",
     "dev": "concurrently --kill-others \"npm run hot-server\" \"npm run start-hot\""
-  },
-  "bin": {
-    "electron": "./node_modules/.bin/electron"
   },
   "repository": {
     "type": "git",
@@ -63,8 +63,6 @@
     "babel": "^6.5.2",
     "babel-eslint": "^7.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-react-constant-elements": "^6.9.1",
-    "babel-plugin-transform-react-remove-prop-types": "^0.2.9",
     "babel-plugin-webpack-loaders": "^0.8.0",
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015-loose": "^8.0.0",
@@ -72,7 +70,6 @@
     "babel-register": "^6.7.2",
     "codecov": "^1.0.1",
     "concurrently": "^3.0.0",
-    "cross-env": "3.1.x",
     "del": "^2.2.0",
     "electron": "1.4.x",
     "electron-packager": "8.5.0",
@@ -83,20 +80,16 @@
     "eslint-plugin-jsx-a11y": "^3.0.1",
     "eslint-plugin-react": "6.x.x",
     "express": "^4.13.4",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "fbjs-scripts": "^0.7.1",
     "gh-pages": "^0.12.0",
     "gitbook-cli": "^2.3.0",
     "istanbul": "^1.1.0-alpha.1",
     "jsdom": "^9.4.1",
     "modclean": "^1.2.7",
-    "moment": "^2.13.0",
     "react-addons-test-utils": "^15.0.1",
     "redux-devtools": "^3.2.0",
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.0.11",
     "redux-logger": "^2.6.1",
-    "style-loader": "^0.13.1",
     "tap-spec": "^4.1.1",
     "tape": "^4.6.0",
     "webpack-dev-middleware": "^1.6.1",
@@ -109,6 +102,8 @@
     "babel-loader": "^6.2.4",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-resolver": "^1.1.0",
+    "babel-plugin-transform-react-constant-elements": "^6.9.1",
+    "babel-plugin-transform-react-remove-prop-types": "^0.2.9",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
@@ -117,6 +112,7 @@
     "brace": "https://github.com/Planeshifter/brace.git",
     "classnames": "^2.2.5",
     "configstore": "^2.1.0",
+    "cross-env": "3.1.x",
     "css-loader": "^0.26.0",
     "css-modules-require-hook": "^4.0.0",
     "d3": "4.4.0",
@@ -124,6 +120,8 @@
     "dompurify": "^0.8.3",
     "electron-window-state": "^4.0.1",
     "element-resize-event": "^2.0.5",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "fbjs-scripts": "^0.7.1",
     "file-loader": "^0.9.0",
     "fixed-data-table": "^0.6.3",
     "fs-plus": "^2.8.2",
@@ -136,6 +134,7 @@
     "lodash.flow": "^3.5.0",
     "markdown-it": "^8.0.0",
     "minimist": "^1.2.0",
+    "moment": "^2.17.1",
     "mustache": "^2.2.1",
     "node-libs-browser": "^2.0.0",
     "normalize.css": "^5.0.0",
@@ -161,6 +160,7 @@
     "request": "2.57.0",
     "semver": "^5.1.0",
     "source-map-support": "^0.4.0",
+    "style-loader": "^0.13.1",
     "uglify-js": "^2.7.0",
     "victory": "^0.15.0",
     "webpack": "^1.13.1"
