--- a/.eslintrc
+++ b/.eslintrc
@@ -13,12 +13,14 @@
     "default-case": 0,
     "no-underscore-dangle": 0,
     "no-use-before-define": 0,
+    "no-unused-vars": [ "error", { "varsIgnorePattern": "React", "args": "none" } ],
     "one-var": [ "error", "never" ],
     "import/no-unresolved": [ 2, {
       "ignore": [ "electron" ],
       "commonjs": true
     }],
     "react/jsx-no-bind": 0,
+    "react/jsx-uses-vars": "error",
     "react/prefer-stateless-function": 0,
     "semi": [ 2, "always" ],
     "semi-spacing": [ 2, {
