--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build-renderer": "cross-env NODE_ENV=production node -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.production.js --progress --profile --colors",
     "build": "npm run build-main && npm run build-renderer",
     "start": "cross-env NODE_ENV=production electron ./",
-    "start-hot": "cross-env HOT=1 NODE_ENV=development electron -r babel-register ./main.development",
+    "start-hot": "cross-env HOT=1 NODE_ENV=development DEBUG=* electron -r babel-register ./main.development",
     "package": "cross-env NODE_ENV=production node -r babel-register package.js",
     "package-all": "npm run package -- --all",
     "postinstall": "node node_modules/fbjs-scripts/node/check-dev-engines.js package.json && npm run build",
@@ -118,7 +118,7 @@
     "css-loader": "^0.26.0",
     "css-modules-require-hook": "^4.0.0",
     "d3": "4.4.0",
-    "debug": "^2.2.0",
+    "debug-electron": "0.0.4",
     "dompurify": "^0.8.3",
     "electron-window-state": "^4.0.1",
     "element-resize-event": "^2.0.5",
