--- a/package.json
+++ b/package.json
@@ -162,6 +162,7 @@
     "request": "2.57.0",
     "semver": "^5.1.0",
     "source-map-support": "^0.4.0",
+    "spectacle": "^1.2.5",
     "style-loader": "^0.13.1",
     "uglify-js": "^2.7.0",
     "victory": "^0.15.0",
