--- a/package.json
+++ b/package.json
@@ -113,6 +113,11 @@
     "bootstrap": "^3.3.6",
     "brace": "https://github.com/Planeshifter/brace.git",
     "classnames": "^2.2.5",
+    "compute-max": "^1.0.1",
+    "compute-mean": "^3.0.0",
+    "compute-median": "^2.0.0",
+    "compute-min": "^1.0.1",
+    "compute-range": "^1.1.0",
     "configstore": "^2.1.0",
     "cross-env": "3.1.x",
     "css-loader": "^0.26.0",
@@ -132,6 +137,7 @@
     "js-yaml": "^3.6.1",
     "json-loader": "^0.5.4",
     "katex": "^0.7.0",
+    "lodash.countby": "^4.6.0",
     "lodash.debounce": "^4.0.8",
     "lodash.flow": "^3.5.0",
     "markdown-it": "^8.0.0",
