--- a/package.json
+++ b/package.json
@@ -129,7 +129,8 @@
     "dompurify": "^0.8.3",
     "electron-window-state": "^4.0.1",
     "element-resize-event": "^2.0.5",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "esprima-fb": "^15001.1001.0-dev-harmony-fb",
+    "extract-text-webpack-plugin": "2.0.0-rc.2",
     "fbjs-scripts": "^0.7.1",
     "file-loader": "^0.10.0",
     "fixed-data-table": "^0.6.3",
