--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "bootstrap": "^3.3.6",
     "brace": "https://github.com/Planeshifter/brace.git",
     "classnames": "^2.2.5",
+    "compute-iqr": "^1.1.0",
     "compute-max": "^1.0.1",
     "compute-mean": "^3.0.0",
     "compute-median": "^2.0.0",
@@ -134,7 +135,7 @@
     "fbjs-scripts": "^0.7.1",
     "file-loader": "^0.10.0",
     "fixed-data-table": "^0.6.3",
-    "fs-plus": "^2.8.2",
+    "fs-extra": "^2.0.0",
     "highlight.js": "^9.4.0",
     "jquery": "^3.0.0",
     "js-yaml": "^3.6.1",
