--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "babel": "^6.5.2",
     "babel-eslint": "^7.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-webpack-loaders": "^0.8.0",
+    "babel-plugin-webpack-loaders": "^0.9.0",
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015-loose": "^8.0.0",
     "babel-preset-react-hmre": "^1.1.1",
@@ -73,8 +73,8 @@
     "codecov": "^1.0.1",
     "concurrently": "^3.0.0",
     "del": "^2.2.0",
-    "electron": "1.4.x",
-    "electron-packager": "8.5.0",
+    "electron": "1.6.x",
+    "electron-packager": "8.5.2",
     "electron-rebuild": "^1.1.3",
     "enzyme": "^2.4.1",
     "eslint": "^3.1.1",
@@ -122,17 +122,17 @@
     "compute-range": "^1.1.0",
     "compute-stdev": "^1.0.0",
     "compute-variance": "^3.0.0",
-    "configstore": "^2.1.0",
+    "configstore": "^3.0.0",
     "cross-env": "3.1.x",
     "css-loader": "^0.26.0",
     "css-modules-require-hook": "^4.0.0",
-    "d3": "4.5.0",
+    "d3": "4.7.0",
     "debug-electron": "0.0.4",
     "dompurify": "^0.8.3",
     "electron-window-state": "^4.0.1",
     "element-resize-event": "^2.0.5",
     "esprima-fb": "^15001.1001.0-dev-harmony-fb",
-    "extract-text-webpack-plugin": "2.0.0-rc.2",
+    "extract-text-webpack-plugin": "2.0.0",
     "fbjs-scripts": "^0.7.1",
     "file-loader": "^0.10.0",
     "fixed-data-table": "^0.6.3",
@@ -176,7 +176,7 @@
     "spectacle": "^2.0.0",
     "style-loader": "^0.13.1",
     "uglify-js": "^2.7.0",
-    "victory": "^0.17.0",
+    "victory": "^0.18.0",
     "webpack": "^2.2.1"
   },
   "devEngines": {
