--- a/package.json
+++ b/package.json
@@ -156,6 +156,7 @@
     "react": "^15.0.1",
     "react-bootstrap": "^0.30.2",
     "react-color": "^2.2.7",
+    "react-copy-to-clipboard": "^4.2.3",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^15.0.1",
@@ -172,6 +173,7 @@
     "redux-thunk": "^2.0.1",
     "request": "2.57.0",
     "semver": "^5.1.0",
+    "simplemde": "^1.11.2",
     "source-map-support": "^0.4.0",
     "spectacle": "^2.0.0",
     "style-loader": "^0.13.1",
