--- a/package.json
+++ b/package.json
@@ -70,11 +70,11 @@
     "babel-preset-es2015-loose": "^8.0.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-register": "^6.7.2",
-    "codecov": "^1.0.1",
+    "codecov": "^2.1.0",
     "concurrently": "^3.0.0",
     "del": "^2.2.0",
     "electron": "1.6.x",
-    "electron-packager": "8.5.2",
+    "electron-packager": "8.6.0",
     "electron-rebuild": "^1.1.3",
     "enzyme": "^2.4.1",
     "eslint": "^3.1.1",
@@ -123,16 +123,16 @@
     "compute-stdev": "^1.0.0",
     "compute-variance": "^3.0.0",
     "configstore": "^3.0.0",
-    "cross-env": "3.1.x",
-    "css-loader": "^0.26.0",
+    "cross-env": "3.2.x",
+    "css-loader": "^0.27.3",
     "css-modules-require-hook": "^4.0.0",
-    "d3": "4.7.0",
+    "d3": "4.7.3",
     "debug-electron": "0.0.4",
     "dompurify": "^0.8.3",
     "electron-window-state": "^4.0.1",
     "element-resize-event": "^2.0.5",
     "esprima-fb": "^15001.1001.0-dev-harmony-fb",
-    "extract-text-webpack-plugin": "2.0.0",
+    "extract-text-webpack-plugin": "2.1.0",
     "fbjs-scripts": "^0.7.1",
     "file-loader": "^0.10.0",
     "fixed-data-table": "^0.6.3",
@@ -152,6 +152,7 @@
     "node-libs-browser": "^2.0.0",
     "normalize.css": "^5.0.0",
     "radium": "^0.18.1",
+    "randomstring": "^1.1.5",
     "raw-loader": "^0.5.1",
     "react": "^15.0.1",
     "react-bootstrap": "^0.30.2",
@@ -163,7 +164,7 @@
     "react-notification-system": "^0.2.7",
     "react-player": "^0.14.0",
     "react-redux": "^5.0.1",
-    "react-router": "^3.0.0",
+    "react-router": "^4.0.0",
     "react-router-redux": "^4.0.2",
     "react-slick": "^0.14.6",
     "react-split-pane": "^0.1.42",
