--- a/package.json
+++ b/package.json
@@ -162,7 +162,7 @@
     "react-notification-system": "^0.2.7",
     "react-player": "^0.14.0",
     "react-redux": "^5.0.1",
-    "react-router": "^4.0.0",
+    "react-router": "3.0.2",
     "react-router-redux": "^4.0.2",
     "react-slick": "^0.14.6",
     "react-split-pane": "^0.1.42",
