--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
   },
   "dependencies": {
     "@stdlib/stdlib": "github:stdlib-js/stdlib#develop",
+    "archiver": "^1.3.0",
     "babel-core": "^6.11.4",
     "babel-loader": "^6.2.4",
     "babel-plugin-add-module-exports": "^0.2.1",
@@ -121,8 +122,8 @@
     "compute-stdev": "^1.0.0",
     "compute-variance": "^3.0.0",
     "configstore": "^3.0.0",
-    "cross-env": "3.2.x",
-    "css-loader": "^0.27.3",
+    "cross-env": "4.x.x",
+    "css-loader": "^0.28.0",
     "css-modules-require-hook": "^4.0.0",
     "d3": "^4.7.3",
     "debug-electron": "0.0.4",
@@ -132,7 +133,7 @@
     "esprima-fb": "^15001.1001.0-dev-harmony-fb",
     "extract-text-webpack-plugin": "2.1.0",
     "fbjs-scripts": "^0.7.1",
-    "file-loader": "^0.10.0",
+    "file-loader": "^0.11.0",
     "fixed-data-table": "^0.6.3",
     "fs-extra": "^2.0.0",
     "highlight.js": "^9.4.0",
