Use drop-in replacement for createClass

--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "compute-stdev": "^1.0.0",
     "compute-variance": "^3.0.0",
     "configstore": "^3.0.0",
+    "create-react-class": "^15.5.2",
     "cross-env": "4.x.x",
     "css-loader": "^0.28.0",
     "css-modules-require-hook": "^4.0.0",
@@ -150,6 +151,7 @@
     "mustache": "^2.2.1",
     "node-libs-browser": "^2.0.0",
     "normalize.css": "^6.0.0",
+    "prop-types": "^15.5.8",
     "radium": "^0.18.1",
     "randomstring": "^1.1.5",
     "raw-loader": "^0.5.1",
