--- a/package.json
+++ b/package.json
@@ -105,11 +105,12 @@
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-resolver": "^1.1.0",
     "babel-plugin-transform-react-constant-elements": "^6.9.1",
-    "babel-plugin-transform-react-remove-prop-types": "^0.3.1",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "babel-runtime": "^6.9.2",
+    "bl": "^1.2.0",
     "bootstrap": "^3.3.6",
     "brace": "https://github.com/Planeshifter/brace.git",
     "compute-iqr": "^1.1.0",
@@ -163,7 +164,7 @@
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^15.0.1",
     "react-notification-system": "^0.2.7",
-    "react-player": "^0.14.0",
+    "react-player": "^0.15.0",
     "react-redux": "^5.0.1",
     "react-router": "3.0.2",
     "react-router-redux": "^4.0.2",
@@ -173,13 +174,14 @@
     "rebass": "^0.3.1",
     "redux": "^3.4.0",
     "redux-thunk": "^2.0.1",
-    "request": "2.57.0",
+    "request": "2.81.0",
     "semver": "^5.1.0",
     "simplemde": "^1.11.2",
     "source-map-support": "^0.4.0",
     "spectacle": "^2.0.0",
     "style-loader": "^0.16.1",
     "uglify-js": "^2.7.0",
+    "uniq": "^1.0.1",
     "victory": "^0.18.0",
     "webpack": "^2.2.1"
   },
