--- a/package.json
+++ b/package.json
@@ -100,8 +100,8 @@
   "dependencies": {
     "@stdlib/stdlib": "github:stdlib-js/stdlib#develop",
     "archiver": "^1.3.0",
-    "babel-core": "^6.11.4",
-    "babel-loader": "^7.0.0",
+    "babel-core": "6.24.1",
+    "babel-loader": "7.0.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-resolver": "^1.1.0",
     "babel-plugin-transform-react-constant-elements": "^6.9.1",
@@ -168,8 +168,8 @@
     "react-notification-system": "^0.2.7",
     "react-player": "^0.18.0",
     "react-redux": "^5.0.1",
-    "react-router": "3.0.2",
-    "react-router-redux": "^4.0.2",
+    "react-router": "4.1.1",
+    "react-router-dom": "^4.1.1",
     "react-slick": "^0.14.6",
     "react-split-pane": "^0.1.42",
     "react-tools": "^0.13.3",
@@ -182,7 +182,7 @@
     "source-map-support": "^0.4.0",
     "spectacle": "^2.0.0",
     "style-loader": "^0.18.2",
-    "uglify-js": "github:mishoo/UglifyJS2#harmony",
+    "uglify-es": "^3.0.15",
     "uniq": "^1.0.1",
     "victory": "^0.21.0",
     "webpack": "2.6.1"
