--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "bl": "^1.2.0",
     "bootstrap": "^3.3.6",
     "brace": "https://github.com/Planeshifter/brace.git",
+    "bufferutil": "^3.0.1",
     "compute-iqr": "^1.1.0",
     "compute-max": "^1.0.1",
     "compute-mean": "^3.0.0",
@@ -174,16 +175,19 @@
     "react-split-pane": "^0.1.42",
     "react-tools": "^0.13.3",
     "rebass": "^0.3.1",
+    "recordrtc": "^5.4.1",
     "redux": "^3.4.0",
     "redux-thunk": "^2.0.1",
     "request": "2.57.0",
     "semver": "^5.1.0",
     "simplemde": "^1.11.2",
+    "socket.io-client": "^2.0.3",
     "source-map-support": "^0.4.0",
     "spectacle": "^2.0.0",
     "style-loader": "^0.18.2",
     "uglify-es": "^3.0.15",
     "uniq": "^1.0.1",
+    "utf-8-validate": "^3.0.2",
     "victory": "^0.21.0",
     "webpack": "2.6.1"
   },
