Add and remove dependencies

--- a/package.json
+++ b/package.json
@@ -130,8 +130,10 @@
     "css": "^2.2.1",
     "css-loader": "^0.28.0",
     "css-modules-require-hook": "^4.0.0",
+    "csv-parse": "^1.2.1",
     "d3": "^4.7.3",
     "debug-electron": "0.0.4",
+    "detect-csv": "^1.1.0",
     "dompurify": "^0.9.0",
     "electron-window-state": "^4.0.1",
     "element-resize-event": "^2.0.5",
@@ -148,7 +150,6 @@
     "js-yaml": "^3.6.1",
     "json-loader": "^0.5.4",
     "katex": "^0.7.0",
-    "lodash.countby": "^4.6.0",
     "lodash.debounce": "^4.0.8",
     "lodash.flow": "^3.5.0",
     "markdown-it": "^8.0.0",
