--- a/package.json
+++ b/package.json
@@ -88,8 +88,8 @@
     "istanbul": "^1.1.0-alpha.1",
     "jsdom": "^11.0.0",
     "modclean": "^2.0.0",
-    "react-dom": "16.1.1",
-    "react-test-renderer": "16.1.1",
+    "react-dom": "16.2.0",
+    "react-test-renderer": "16.2.0",
     "redux-devtools": "^3.2.0",
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.0.11",
@@ -162,7 +162,7 @@
     "lodash.flow": "^3.5.0",
     "markdown-it": "^8.0.0",
     "minimist": "^1.2.0",
-    "moment": "^2.19.2",
+    "moment": "2.19.3",
     "node-libs-browser": "^2.0.0",
     "normalize.css": "^7.0.0",
     "plotly.js": "^1.29.2",
@@ -170,7 +170,7 @@
     "prop-types": "^15.5.10",
     "randomstring": "^1.1.5",
     "raw-loader": "^0.5.1",
-    "react": "16.1.1",
+    "react": "16.2.0",
     "react-ab-test": "^2.0.1",
     "react-addons-shallow-compare": "^15.6.0",
     "react-bootstrap": "^0.31.0",
@@ -178,10 +178,10 @@
     "react-contextmenu": "^2.6.5",
     "react-copy-to-clipboard": "^5.0.0",
     "react-d3-cloud": "^0.5.0",
-    "react-dates": "15.1.0",
+    "react-dates": "15.2.1",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
-    "react-dom": "16.1.1",
+    "react-dom": "16.2.0",
     "react-grid-layout": "^0.16.0",
     "react-history": "^0.18.2",
     "react-input-range": "^1.2.1",
@@ -211,7 +211,7 @@
     "utf-8-validate": "^3.0.2",
     "venn.js": "0.2.17",
     "victory": "0.24.2",
-    "webpack": "3.8.1"
+    "webpack": "3.9.0"
   },
   "devEngines": {
     "node": "5.x || 6.x || 7.x || 8.x"
