--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "bootstrap": "^3.3.6",
     "brace": "https://github.com/Planeshifter/brace.git",
     "bufferutil": "^3.0.1",
+    "camelcase": "^4.1.0",
     "compute-chunkify": "git+https://github.com/compute-io/chunkify.git",
     "compute-iqr": "^1.1.0",
     "compute-max": "^1.0.1",
@@ -143,6 +144,7 @@
     "dompurify": "^1.0.1",
     "electron-window-state": "^4.0.1",
     "element-resize-event": "^2.0.5",
+    "enzyme-adapter-react-16": "^1.1.1",
     "esprima-fb": "^15001.1001.0-dev-harmony-fb",
     "extract-text-webpack-plugin": "3.0.2",
     "fbjs-scripts": "^0.8.0",
