Change eslint environments and fix lint errors

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,8 @@
 {
   "parser": "babel-eslint",
   "env": {
+    "es6": true,
     "browser": true,
-    "mocha": true,
     "node": true
   },
   "rules": {
