Update contributors field

--- a/package.json
+++ b/package.json
@@ -45,6 +45,20 @@
       "name": "Philipp Burckhardt",
       "email": "pburckhardt@outlook.com",
       "url": "https://github.com/planeshifter"
+    },
+    {
+      "name": "Frank Kovacs",
+      "email": "fkovacs@stat.cmu.edu",
+      "url": "https://github.com/frank113"
+    },
+    {
+      "name": "Lam Kee Wei",
+      "email": "keewei.lam@gmail.com",
+      "url": "https://github.com/lamkeewei"
+    },
+    {
+      "name": "Phalanstere",
+      "url": "https://github.com/Phalanstere"
     }
   ],
   "license": "MIT",
