Use history module

--- a/package.json
+++ b/package.json
@@ -170,6 +170,7 @@
     "gitbook-plugin-expandable-chapters": "^0.2.0",
     "gitbook-plugin-prism": "^2.3.0",
     "highlight.js": "^9.4.0",
+    "history": "^4.7.2",
     "immutability-helper": "^2.6.4",
     "jquery": "^3.0.0",
     "js-yaml": "^3.6.1",
@@ -201,7 +202,6 @@
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "16.2.0",
     "react-grid-layout": "^0.16.0",
-    "react-history": "^0.18.2",
     "react-input-range": "^1.2.1",
     "react-notification-system": "^0.2.7",
     "react-player": "^1.0.0",
