--- a/package.json
+++ b/package.json
@@ -95,12 +95,12 @@
     "eslint": "^4.16.0",
     "eslint-plugin-import": "^2.0.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "7.x.x",
+    "eslint-plugin-react": "^7.6.1",
     "express": "^4.13.4",
     "gh-pages": "^1.0.0",
     "gitbook-cli": "^2.3.0",
     "istanbul": "^1.1.0-alpha.1",
-    "jsdom": "^11.6.0",
+    "jsdom": "^11.6.2",
     "modclean": "^2.0.0",
     "null-loader": "^0.1.1",
     "react-test-renderer": "16.2.0",
@@ -219,6 +219,7 @@
     "redux": "^3.4.0",
     "redux-thunk": "^2.0.1",
     "request": "2.83.0",
+    "ripemd160": "^2.0.1",
     "semver": "^5.5.0",
     "simplemde": "^1.11.2",
     "socket.io-client": "^2.0.3",
