--- a/package.json
+++ b/package.json
@@ -88,8 +88,8 @@
     "codecov": "^3.0.0",
     "concurrently": "^3.0.0",
     "del": "^3.0.0",
-    "electron": "1.7.12",
-    "electron-packager": "10.1.2",
+    "electron": "1.8.2",
+    "electron-packager": "11.0.0",
     "electron-rebuild": "^1.7.3",
     "enzyme": "3.3.0",
     "eslint": "^4.16.0",
@@ -180,6 +180,7 @@
     "lodash.debounce": "^4.0.8",
     "lodash.flow": "^3.5.0",
     "markdown-it": "^8.0.0",
+    "markdown-it-katex": "^2.0.3",
     "minimist": "^1.2.0",
     "moment": "2.20.1",
     "node-libs-browser": "^2.0.0",
@@ -213,7 +214,7 @@
     "react-router": "4.2.0",
     "react-router-dom": "^4.1.1",
     "react-select": "^1.2.1",
-    "react-slick": "^0.17.1",
+    "react-slick": "^0.18.0",
     "react-split-pane": "0.1.76",
     "react-table": "^6.7.6",
     "react-tools": "^0.13.3",
@@ -231,11 +232,11 @@
     "svg-react-loader": "^0.4.5",
     "turndown": "^4.0.1",
     "turndown-plugin-gfm": "^1.0.1",
-    "uglify-es": "3.3.9",
+    "uglify-es": "3.3.10",
     "uniq": "^1.0.1",
     "utf-8-validate": "^4.0.0",
     "venn.js": "0.2.19",
-    "victory": "0.25.1",
+    "victory": "0.25.4",
     "webpack": "3.10.0"
   },
   "devEngines": {
