--- a/package.json
+++ b/package.json
@@ -180,7 +180,10 @@
     "lodash.debounce": "^4.0.8",
     "lodash.flow": "^3.5.0",
     "markdown-it": "^8.0.0",
+    "markdown-it-container": "^2.0.0",
+    "markdown-it-ins": "^2.0.0",
     "markdown-it-katex": "^2.0.3",
+    "markdown-it-sub": "^1.0.0",
     "minimist": "^1.2.0",
     "moment": "2.20.1",
     "node-libs-browser": "^2.0.0",
