Add RangeQuestion to question components

--- a/app/editor-components/editor/components.json
+++ b/app/editor-components/editor/components.json
@@ -57,7 +57,8 @@
 		"MatchListQuestion",
 		"MultipleChoiceQuestion",
 		"NumberQuestion",
-		"RangeQuestion"
+		"RangeQuestion",
+		"SelectQuestion"
 	],
 	"SURVEY": [
 		"FreeTextSurvey",
