Add lesson submit to main components

--- a/app/editor-components/editor/components.json
+++ b/app/editor-components/editor/components.json
@@ -56,7 +56,8 @@
 		"DataTable",
 		"FeedbackButtons",
 		"MarkdownEditor",
-		"TeX"
+		"TeX",
+		"LessonSubmit"
 	],
 	"QUESTION": [
 		"FreeTextQuestion",
